# aichat

./: Cargo.toml  styles.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
