[package]
name = "aichat-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["js", "serde", "v7"] }

[workspace]
members = ["src-tauri"]
